# C-tubes

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
data/fig14_klein_bottle/: target_cross_section_radii.txt
data/fig15_rocking_chair/: target_cross_section_radii.txt
data/fig2_casting/: target_cross_section_radii.txt
notebooks/: demo.ipynb
notebooks/figures/: fig10_nonplanar.ipynb  fig11_scaling.ipynb  fig12_7fold_torus.ipynb  fig14_klein_bottle.ipynb  fig15_rocking_chair.ipynb  fig16_bridge.ipynb  fig17_min_surf.ipynb  fig19_foldable_accordion.ipynb  fig2_casting.ipynb  fig9_trefoil.ipynb  notebook_paths.py  run_all.py
python/Ctubes/: connectors.py  curve_parametrizations.py  geometry_utils.py  misc_utils.py  objectives.py  opt.py  path_utils.py  plot_utils.py  target_cross_sections.py  tube_generation.py  tube_networks.py  tubes.py
